--- a/assets/styles/partials/_navigation.scss
+++ b/assets/styles/partials/_navigation.scss
@@ -39,19 +39,13 @@
 }
 
 .search-input {
-  display: block;
-  width: 200px;
-  margin-bottom: 0px;
-  padding-left: 20px;
-  float: left;
   border-style: solid;
   border-width: 1px;
   border-color: hsla(0, 0%, 100%, .6);
   border-radius: 10px;
   background-color: transparent;
-  -webkit-transition: background-color 350ms ease;
   transition: background-color 350ms ease;
-  color: #fff;
+  color: $color-light;
 }
 
 .search-input:focus {
