--- a/assets/styles/partials/_navigation.scss
+++ b/assets/styles/partials/_navigation.scss
@@ -21,6 +21,11 @@
 	text-decoration: none;
 	text-shadow:-2px 2px 0px rgba(0,0,0,0.3),-3px 3px 1px rgba(0,0,0,0.5),-4px 4px 2px rgba(0,0,0,0.2);
 	
+	.search-form {
+		margin: 0, 0, 0, auto;
+		width: 100%;
+	}
+
 	.search-input {
 		border-style: solid;
 		border-width: 1px;
