--- a/assets/styles/partials/_navigation.scss
+++ b/assets/styles/partials/_navigation.scss
@@ -21,33 +21,11 @@
 	text-decoration: none;
 	text-shadow:-2px 2px 0px rgba(0,0,0,0.3),-3px 3px 1px rgba(0,0,0,0.5),-4px 4px 2px rgba(0,0,0,0.2);
 	
-	.search-form {
-		margin: 0, 0, 0, auto;
-		width: 100%;
-	}
-
-	.search-input {
-		border-style: solid;
-		border-width: 1px;
-		border-color: hsla(0, 0%, 100%, .6);
-		border-radius: 10px;
-		background-color: transparent;
-		transition: background-color 350ms ease;
-		color: $color-light;
-	}
-	
-	.search-input:focus {
-		border-color: $color-light;
-		background-color: hsla(0, 0%, 100%, .8);
-		color: $color-grey;
-	}
-
 	.row {
-		width: 100%;
-		max-width: 940px;
-		max-width: 90vw;
-		margin: 0 auto;
 		position: relative;
+		display: table;
+		width: 95vw;
+		margin: 0 auto;
 		padding: 0 2%;
 	}
 
@@ -55,6 +33,29 @@
 	  box-sizing: border-box;
 	}
 	
+	.search-box {
+		.search-input {
+			width: 15px;
+			border-style: solid;
+			border-width: 1px;
+			border-color: hsla(0, 0%, 100%, .6);
+			border-radius: 10px;
+			background-color: transparent;
+			transition: background-color 350ms ease;
+			color: $color-light;
+		}
+		
+		.search-input:focus {
+			border-color: $color-light;
+			background-color: hsla(0, 0%, 100%, .8);
+			color: $color-grey;
+		}
+
+		span {
+			font-size: 15px;
+		}
+	}
+
 	.logo {
 		margin-top: 0;
 		margin-bottom: 22px;
