--- a/assets/styles/partials/_navigation.scss
+++ b/assets/styles/partials/_navigation.scss
@@ -26,7 +26,6 @@
 		display: table;
 		width: 95vw;
 		margin: 0 auto;
-		padding: 0 2%;
 	}
 
 	* {
@@ -35,7 +34,6 @@
 	
 	.search-box {
 		.search-input {
-			width: 15px;
 			border-style: solid;
 			border-width: 1px;
 			border-color: hsla(0, 0%, 100%, .6);
@@ -57,9 +55,9 @@
 	}
 
 	.logo {
-		margin-top: 0;
-		margin-bottom: 22px;
-	  	line-height: 1.5;
+		position: relative;
+		display: table-cell;
+		vertical-align: middle;
 	}
 	@media only screen and (max-width: 766px) {
 	  	.logo {
@@ -68,7 +66,10 @@
 	}
 	
 	nav {
-	  	width: 95%;
+		position: relative;
+		display: table-cell;
+		vertical-align: middle;
+		float: right;
 		color: $color-light;
 	}
 	@media only screen and (max-width: 766px) {
