fix formatting for tablets

--- a/assets/styles/partials/_navigation.scss
+++ b/assets/styles/partials/_navigation.scss
@@ -94,8 +94,7 @@
 	}
 	nav ul li {
 	  display: inline-block;
-	  margin-left: 35px;
-	  margin-left: 2.4325vw; 
+	  margin: 0 5px;
 	  line-height: 1.5;
 	}
 	@media only screen and (max-width: 766px) {
