display toggle from mq-med (58e) because we run into issues at 766 px (47em)

--- a/assets/styles/partials/_navigation.scss
+++ b/assets/styles/partials/_navigation.scss
@@ -148,7 +148,7 @@
 	-moz-transition: all 200ms ease-in;
 	transition: all 200ms ease-in;
 }
-@media only screen and (max-width: 766px) {
+@media only screen and (max-width: $mq-med) {
 	.mobile-toggle {
 		display: block;
 	}
