implement new call-to-action section

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -27,6 +27,7 @@
 @import 'partials/_about';
 @import 'partials/_introduction';
 @import 'partials/_sponsors';
+@import 'partials/_call-to-action';
 @import 'partials/_contact';
 @import 'partials/_footer';
 @import 'partials/_animations';
