--- a/assets/styles/partials/_contact.scss
+++ b/assets/styles/partials/_contact.scss
@@ -6,12 +6,12 @@
 	position: relative;
 	display: table;
 	width: 100%;
-	margin: 0 auto;
+	margin: 2em auto;
 	text-align: center;
 	color: $color-grey;
 	
 	h1 {
-		color: $color-grey;
+		color: $color-blue;
 	}
 
 	img {
