--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -21,6 +21,7 @@
 =======================================*/
 @import 'partials/_typography';
 @import 'partials/_layout';
+@import 'partials/_header';
 @import 'partials/_banner';
 @import 'partials/_ribbon';
 @import 'partials/_navigation';
