--- a/assets/styles/partials/_header.scss
+++ b/assets/styles/partials/_header.scss
@@ -6,7 +6,7 @@
         position: relative;
         display: table;
         width: 100%;
-        margin: 2em auto;
+	height: 6em;
 
 	.container {
         	position: relative;
