remove link from blog description

--- a/assets/styles/partials/_header.scss
+++ b/assets/styles/partials/_header.scss
@@ -20,5 +20,14 @@
         img {
                 width: 100px;
         }
+
+	.brand {
+		font-family: Lato;
+		font-weight: 100;
+		
+		h1 {
+			font-weight: 900;
+		}
+	}
 }
 
