--- a/assets/styles/partials/_banner.scss
+++ b/assets/styles/partials/_banner.scss
@@ -150,6 +150,7 @@
                 	font-family: Lato;
 			font-weight: 900;
 			font-size: 15px;
+			line-height: 44px;
                 	text-align: center;
                 	color: $color-dark;
 		}
