--- a/assets/styles/partials/_banner.scss
+++ b/assets/styles/partials/_banner.scss
@@ -135,11 +135,9 @@
 		@include animation(fade-in ease-in-out 1s 1s both);
 		position: relative;
 		display: table;
-		overflow: hidden;
                 border: 1px solid $color-dark;
                 border-radius: 50px;
-                background-color: $color-yellow;
-		background-image: linear-gradient(180deg,#fff 0,hsla(0,0%,100%,0));
+		background-image: linear-gradient(180deg,$color-yellow 0,hsla(0,0%,100%,0));
                 margin: 1em auto;
                 width: 100px;
                 height: 100px;
