17px too big... needs to be smaller

--- a/assets/styles/partials/_navigation.scss
+++ b/assets/styles/partials/_navigation.scss
@@ -8,14 +8,13 @@
 	max-height: 70px;
 	z-index: 999;
 	width: 100%;
-	padding-top: 17px;
 	background: none;
 	overflow: hidden;
 	-webkit-transition: all 0.3s;
 	transition: all 0.3s;
 	opacity: 0;
 	top: -100px;
-	padding-bottom: 17px;
+	padding: 7px 0;
 	font-family: "Montserrat", sans-serif;
 	box-shadow: 0 2px 3px rgba(0,0,0,.4);
 	text-decoration: none;
