--- a/assets/styles/partials/_page.scss
+++ b/assets/styles/partials/_page.scss
@@ -6,6 +6,15 @@
 	padding: 0;
 	margin: 0;
 	border: none;
+	h1 {
+		font-family: Lato;
+		font-weight: 900;
+		font-size: 0.75em;
+        	text-align: left;
+        	text-shadow: 1px 1px 1px rgba(0,0,0,0.1);
+	        text-transform: uppercase;
+		color: $color-blue;
+	}
 }
 
 .content {
