--- a/assets/styles/partials/_page.scss
+++ b/assets/styles/partials/_page.scss
@@ -8,11 +8,14 @@
 	border: none;
 	h1 {
 		font-family: Lato;
-		font-weight: 900;
-		font-size: 1.25em;
+		font-weight: 100;
+		font-size: 52px;
+    		font-style: normal;
         	text-align: left;
         	text-shadow: 1px 1px 1px rgba(0,0,0,0.1);
 	        text-transform: uppercase;
+    		line-height: 65px;
+    		letter-spacing: -1px;
 		color: $color-blue;
 	}
 }
