--- a/assets/styles/partials/_page.scss
+++ b/assets/styles/partials/_page.scss
@@ -28,5 +28,17 @@
 		border: 1px solid $color-grey;
 		margin: 0.5em auto;
 	}
+	h2 {
+		font-family: Lato;
+		font-weight: 100;
+		font-size: 42px;
+    		font-style: normal;
+        	text-align: left;
+        	text-shadow: 1px 1px 1px rgba(0,0,0,0.1);
+	        text-transform: uppercase;
+    		line-height: 55px;
+    		letter-spacing: -1px;
+		color: $color-blue;
+	}
 }
 
