--- a/assets/styles/partials/_config.scss
+++ b/assets/styles/partials/_config.scss
@@ -47,3 +47,15 @@ $watchers-p: url("https://s3.ap-northeast-2.amazonaws.com/international-vaccine-
 $watchers-l: url("https://s3.ap-northeast-2.amazonaws.com/international-vaccine-institute/watchers-2000x1350px.jpeg");
 $vaccination-p: url("https://s3.ap-northeast-2.amazonaws.com/international-vaccine-institute/vaccination-juice-800x1200px.jpeg");
 $vaccination-l: url("https://s3.ap-northeast-2.amazonaws.com/international-vaccine-institute/vaccination-juice-2000x1350px.jpeg");
+$nepal-shot-p: url("https://s3.ap-northeast-2.amazonaws.com/international-vaccine-institute/nepal-shot-800x1200px.png");
+$nepal-shot-l: url("https://s3.ap-northeast-2.amazonaws.com/international-vaccine-institute/nepal-shot-2000x1333px.jpg");
+$viles-p: url("https://s3.ap-northeast-2.amazonaws.com/international-vaccine-institute/viles-800x1200px.png");
+$viles-l: url("https://s3.ap-northeast-2.amazonaws.com/international-vaccine-institute/viles-2000x1333px.jpg");
+$injecting-p: url("https://s3.ap-northeast-2.amazonaws.com/international-vaccine-institute/injecting-800x1168px.png");
+$injecting-l: url("https://s3.ap-northeast-2.amazonaws.com/international-vaccine-institute/injecting-2000x1350px.png");
+$flowers-p: url("https://s3.ap-northeast-2.amazonaws.com/international-vaccine-institute/flowers-800x1200px.png");
+$flowers-l: url("https://s3.ap-northeast-2.amazonaws.com/international-vaccine-institute/flowers-1480x900px.jpg");
+$ball-p: url("https://s3.ap-northeast-2.amazonaws.com/international-vaccine-institute/ball-800x1200px.png");
+$ball-l: url("https://s3.ap-northeast-2.amazonaws.com/international-vaccine-institute/ball-1480x900px.jpg");
+$water-p: url("https://s3.ap-northeast-2.amazonaws.com/international-vaccine-institute/water-800x1200px.png");
+$water-l: url("https://s3.ap-northeast-2.amazonaws.com/international-vaccine-institute/water-1480x900px.jpg");
