--- a/assets/styles/partials/_banner.scss
+++ b/assets/styles/partials/_banner.scss
@@ -112,23 +112,23 @@
 			background-attachment: fixed;
 			opacity: 0;
 			@include animation(fade-out 27s infinite both);
-			background-image: $flowers-p;
+			background-image: $injecting-p;
 			@media (min-width: $mq-med) {
-				background-image: $flowers-l;
+				background-image: $injecting-l;
 			}
 		}
 	 	li:nth-child(2) {
-			background-image: $ball-p;
+			background-image: $viles-p;
 			@include animation-delay(18s);
 			@media (min-width: $mq-med) {
-				background-image: $ball-l;
+				background-image: $viles-l;
 			}
 		}
 		li:nth-child(3) {
-			background-image: $water-p;
+			background-image: $ivi-hq-p;
 			@include animation-delay(9s);
 			@media (min-width: $mq-med) {
-				background-image: $water-l;
+				background-image: $ivi-hq-l;
 			}
 		}
 	}
