--- a/assets/styles/partials/_banner.scss
+++ b/assets/styles/partials/_banner.scss
@@ -125,10 +125,10 @@
 			}
 		}
 		li:nth-child(3) {
-			background-image: $ivi-hq-p;
+			background-image: $office-p;
 			@include animation-delay(9s);
 			@media (min-width: $mq-med) {
-				background-image: $ivi-hq-l;
+				background-image: $office-l;
 			}
 		}
 	}
