--- a/assets/styles/partials/_footer.scss
+++ b/assets/styles/partials/_footer.scss
@@ -28,6 +28,9 @@
 			@include animation(fade-in ease-in-out 2s 0.5s both);
 		}
 	}
+	.spacer {
+		min-height: 1em;
+	}
 	p {
 		font-size: 90%;
 		@include animation(fade-in ease-in-out 2s 1s both);
@@ -36,6 +39,7 @@
 		font-weight: 900;
 		font-size: 120%;
 		margin: 0.5em 0;
+		padding: 1em 0;
 		@include animation(fade-in ease-in-out 2s 1s both);
 	}
 	img {
