--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -24,6 +24,7 @@
 @import 'partials/_header';
 @import 'partials/_banner';
 @import 'partials/_ribbon';
+@import 'partials/_submenu';
 @import 'partials/_navigation';
 @import 'partials/_about';
 @import 'partials/_introduction';
