add submenu stylesheet

--- a/assets/styles/partials/_submenu.scss
+++ b/assets/styles/partials/_submenu.scss
@@ -4,7 +4,7 @@
 
 .submenu {
 	padding: 0.2em;
-	background-color: $color-orane;
+	background-color: $color-orange;
 	color: $color-light;
 	z-index: 1;
 	
